--- a/.github/workflows/build-and-push-to-ghcr.yml
+++ b/.github/workflows/build-and-push-to-ghcr.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: server/Dockerfile
-          push: ${{ env.RELEASE_VERSION }}=="main"
+          push: true if ${{ env.RELEASE_VERSION }}=="main" else false
           cache-from: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
           cache-to: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
           tags: coqui-ai/xtts-streaming-server:latest
