--- a/.github/workflows/build-and-push-to-ghcr.yml
+++ b/.github/workflows/build-and-push-to-ghcr.yml
@@ -33,8 +33,9 @@ jobs:
       - name: Build only for PR
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v5
+        working-directory: ./server
         with:
-          file: ./server/Dockerfile
+          file: Dockerfile
           push: false
           cache-from: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
           cache-to: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
@@ -44,8 +45,9 @@ jobs:
       - name: Build and Push image
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
+        working-directory: ./server
         with:
-          file: server/Dockerfile
+          file: Dockerfile
           push: false
           cache-from: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
           cache-to: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest
