--- a/.github/workflows/build-and-push-to-ghcr.yml
+++ b/.github/workflows/build-and-push-to-ghcr.yml
@@ -39,6 +39,7 @@ jobs:
           file: Dockerfile
           push: false
           cache-from: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest-cache
+          cache-to: type=registry,ref=ghcr.io/coqui-ai/xtts-streaming-server:latest-cache
           tags: coqui-ai/xtts-streaming-server:${{ env.RELEASE_VERSION }}-${{ github.sha }}
           #build-args:
 
