--- a/server/Dockerfile.cuda121
+++ b/server/Dockerfile.cuda121
@@ -1,4 +1,4 @@
-FROM pytorch/pytorch:2.1.0-cuda12.1-cudnn8-runtime
+FROM pytorch/pytorch:2.1.0-cuda12.1-cudnn8-devel
 WORKDIR /app
 COPY requirements.txt .
 RUN python -m pip install --use-deprecated=legacy-resolver -r requirements.txt \
