--- a/.github/workflows/build-and-push-to-ghcr.yml
+++ b/.github/workflows/build-and-push-to-ghcr.yml
@@ -20,6 +20,13 @@ jobs:
           set -xe
           docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
 
+      - name: 'Remove cache'
+        run: | 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - name: Build only for PR Cuda 11.7
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v5
@@ -58,6 +65,13 @@ jobs:
           set -xe
           docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
 
+      - name: 'Remove cache'
+        run: | 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
       - name: Build only for PR cuda 11.8
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v5
@@ -95,6 +109,13 @@ jobs:
         run: |
           set -xe
           docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
+
+      - name: 'Remove cache'
+        run: | 
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
 
       - name: Build only for PR cuda 12.1
         if: github.ref != 'refs/heads/main'
