--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,3 +6,6 @@ pydantic==1.10.13
 python-multipart==0.0.6
 typing-extensions>=4.8.0
 numpy==1.24.3
+cutlet
+mecab-python3==1.0.6
+unidic-lite==1.0.8
