--- a/server/Dockerfile.cuda121
+++ b/server/Dockerfile.cuda121
@@ -1,4 +1,9 @@
 FROM pytorch/pytorch:2.1.0-cuda12.1-cudnn8-devel
+
+RUN apt-get update && \
+    apt-get install --no-install-recommends -y sox libsox-fmt-all curl wget gcc git git-lfs build-essential libaio-dev libsndfile1 ssh ffmpeg && \
+    apt-get clean && apt-get -y autoremove
+
 WORKDIR /app
 COPY requirements.txt .
 RUN python -m pip install --use-deprecated=legacy-resolver -r requirements.txt \
