--- a/server/Dockerfile.cuda121
+++ b/server/Dockerfile.cuda121
@@ -9,6 +9,8 @@ COPY requirements.txt .
 RUN python -m pip install --use-deprecated=legacy-resolver -r requirements.txt \
     && python -m pip cache purge
 
+RUN python -m unidic download
+
 COPY main.py .
 
 #Mark this 1 if you have older card
